@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 10, 2012</p>
+      <p>Last Updated: March 11, 2012</p>
     </td>
   </tr>
 </table>
@@ -478,7 +478,7 @@
   <td>
     <p>
       <li>
-        Network, USB (host), USB (device), serial, CAN, ADC, DAC, and PWM driver architectures.
+        Network, USB (host), USB (device), serial, CAN, ADC, DAC, PWM, and Quadrature Encoder driver architectures.
       </li>
     </p>
 </tr>
@@ -1790,7 +1790,7 @@
         <a href="http://www.nuttx.org/NuttShell.html">NSH User Guide</a>) as well as several other configurations.
         Additional drivers and configurations were added in NuttX 6.13-6.16.
         Drivers include an Ethernet driver, ADC driver, DAC driver, PWM driver, CAN driver, F4 RTC driver, Quadrature Encoder, DMA, SDIO with DMA
-        (most of these are compatible with the F1 family as well).
+        (these should all be compatible with the STM32 F2 family and many should also be compatible with the STM32 F1 family as well).
         The NuttX6.16 release also includes and logic for saving/restoring F4 FPU registers in context switches.
         Networking intensions include support for Telnet NSH sessions and new configurations for DHPCD and the networking test (nettest).
         A more complete port would include support for SDIO and USB OTG which are not available in NuttX 6.13.
