@@ -2552,3 +2552,5 @@
  
 6.17 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>
 
+	* configs/sure-pic32mx: Add support for the Sure DB-DP11212 PIC32 General
+	  Purpose Demo Board
